--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "dat.gui": "^0.7.6",
     "next": "9.0.5",
     "node-sass": "^4.12.0",
     "react": "16.9.0",
-    "react-dom": "16.9.0"
+    "react-dom": "16.9.0",
+    "three": "^0.108.0"
   },
   "license": "ISC",
   "devDependencies": {
