--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
   "rules": {
     "react/jsx-filename-extension": "off",
     "jsx-a11y/anchor-is-valid": "off",
+    "global-require": "off",
     "semi": [
       "error",
       "never"
