--- a/.eslintrc
+++ b/.eslintrc
@@ -32,8 +32,10 @@
   "rules": {
     "react/jsx-props-no-spreading": "off",
     "react/jsx-filename-extension": "off",
+    "react/prop-types": "off",
     "jsx-a11y/anchor-is-valid": "off",
     "global-require": "off",
+    "no-underscore-dangle": "off",
     "semi": [
       "error",
       "never"
