--- a/package.json
+++ b/package.json
@@ -12,13 +12,24 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "dat.gui": "^0.7.6",
+    "isomorphic-fetch": "^2.2.1",
     "next": "9.0.5",
     "node-sass": "^4.12.0",
     "react": "16.9.0",
-    "react-dom": "16.9.0"
+    "react-dom": "16.9.0",
+    "three": "^0.108.0"
   },
   "license": "ISC",
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "path": "^0.12.7"
   }
 }
